write script for updateDbWithQuotes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "update-db": "node utils/updateDbWithQuotes.js"
   },
   "keywords": [],
   "author": "",
